Cursor not reset properly (disappears after rotating navigation gizmo, stuck after importing) #80333

Closed
opened 2020-09-01 17:03:09 +02:00 by Leo Schmidt · 31 comments

System Information
Operating system: Darwin-19.5.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.9.15

tested also on another mac setup

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-31 22:30, hash: 4e06afb0a1
Caused by e490dc4346

Short description of error
In edit-mode the mouse cursor disappears after using the interactive navigation axis
interactive navigation axis.png
Exact steps for others to reproduce the error

  1. create a new scene
  2. switch to edit-mode
  3. use interactive navigation to rotate the camera
  4. move the mouse into the 3d viewport
  5. the mouse cursor is gone

(6. the mouse cursor appears again when moving it over non-viewport elements or the toolbar)

**System Information** Operating system: Darwin-19.5.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 5500M OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.9.15 tested also on another mac setup **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-31 22:30, hash: `4e06afb0a1` Caused by e490dc4346 **Short description of error** In edit-mode the mouse cursor disappears after using the interactive navigation axis ![interactive navigation axis.png](https://archive.blender.org/developer/F8829933/interactive_navigation_axis.png) **Exact steps for others to reproduce the error** 1. create a new scene 2. switch to edit-mode 3. use interactive navigation to rotate the camera 4. move the mouse into the 3d viewport 5. the mouse cursor is gone (6. the mouse cursor appears again when moving it over non-viewport elements or the toolbar)
Author

Added subscriber: @LeoSch

Added subscriber: @LeoSch

#80754 was marked as duplicate of this issue

#80754 was marked as duplicate of this issue

#80656 was marked as duplicate of this issue

#80656 was marked as duplicate of this issue

#80363 was marked as duplicate of this issue

#80363 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't repro. It may be a problem on MacOS

I can't repro. It may be a problem on MacOS
Author

Investigated a bit more:

In the 2.90 release, I have the same issue.
In the 2.83.5 LTS release, everything works fine.

  • switching to edit mode whilst hovering over the interactive navigation axis triggers it less
  • when the mouse cursor is gone, switching to object mode also brings it back
Investigated a bit more: In the 2.90 release, I have the same issue. In the 2.83.5 LTS release, everything works fine. - switching to edit mode whilst hovering over the interactive navigation axis triggers it less - when the mouse cursor is gone, switching to object mode also brings it back

Added subscriber: @girafic

Added subscriber: @girafic

Same problem with 2.90 on MacOS.

cursor_disappears.mp4

Same problem with 2.90 on MacOS. [cursor_disappears.mp4](https://archive.blender.org/developer/F8836050/cursor_disappears.mp4)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can repro in 930021129a and 0330d1af29

**System Information**
Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100
version: 2.91.0 Alpha, branch: master, commit date: 2020-09-03 10:56, hash: `rB930021129a1e`
Can repro in 930021129a and 0330d1af29 ``` **System Information** Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 version: 2.91.0 Alpha, branch: master, commit date: 2020-09-03 10:56, hash: `rB930021129a1e` ```
Ankit Meel changed title from Cursor disappears to Cursor disappears after rotating navigation gizmo 2020-09-03 13:05:20 +02:00
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Removed.

Removed.
Member

Caused by e490dc4346

Caused by e490dc4346

@ankitm I've tested on 3 Macs with Intel GPU and AMD, cursor disappers on all three.

@ankitm I've tested on 3 Macs with Intel GPU and AMD, cursor disappers on all three.
Member

Added subscribers: @kuzey, @jenkm, @ideasman42

Added subscribers: @kuzey, @jenkm, @ideasman42
Member

My bad, I was not switching to edit mode. I can redo the error too.
Merged #80363 since that was broken in the same commit. The error in that report can be redone by importing an OBJ file (maybe other formats too), and seeing that the cursor is stuck at showing progress.

My bad, I was not switching to edit mode. I can redo the error too. Merged #80363 since that was broken in the same commit. The error in that report can be redone by importing an OBJ file (maybe other formats too), and seeing that the cursor is stuck at showing progress.
Philipp Oeser self-assigned this 2020-09-03 13:56:48 +02:00
Member

Think I have a fix

Think I have a fix
Philipp Oeser removed their assignment 2020-09-03 14:27:33 +02:00
Member

Well, I have this snippet for regaining the visibility after using the navigation gizmo, the modalcursor being stuck [merged issue] I havent checked further

P1619: T80333_regain_visibility



diff --git a/source/blender/windowmanager/intern/wm_cursors.c b/source/blender/windowmanager/intern/wm_cursors.c
index 8e89c08a831..ce214946c90 100644
--- a/source/blender/windowmanager/intern/wm_cursors.c
+++ b/source/blender/windowmanager/intern/wm_cursors.c
@@ -149,12 +149,6 @@ void WM_cursor_set(wmWindow *win, int curs)
     curs = win->modalcursor;
   }
 
-  if (win->cursor == curs) {
-    return; /* Cursor is already set */
-  }
-
-  win->cursor = curs;
-
   if (curs == WM_CURSOR_NONE) {
     GHOST_SetCursorVisibility(win->ghostwin, 0);
     return;
@@ -162,6 +156,12 @@ void WM_cursor_set(wmWindow *win, int curs)
 
   GHOST_SetCursorVisibility(win->ghostwin, 1);
 
+  if (win->cursor == curs) {
+    return; /* Cursor is already set */
+  }
+
+  win->cursor = curs;
+
   if (curs < 0 || curs >= WM_CURSOR_NUM) {
     BLI_assert(!"Invalid cursor number");
     return;
Well, I have this snippet for regaining the visibility after using the navigation gizmo, the modalcursor being stuck [merged issue] I havent checked further [P1619: T80333_regain_visibility](https://archive.blender.org/developer/P1619.txt) ``` diff --git a/source/blender/windowmanager/intern/wm_cursors.c b/source/blender/windowmanager/intern/wm_cursors.c index 8e89c08a831..ce214946c90 100644 --- a/source/blender/windowmanager/intern/wm_cursors.c +++ b/source/blender/windowmanager/intern/wm_cursors.c @@ -149,12 +149,6 @@ void WM_cursor_set(wmWindow *win, int curs) curs = win->modalcursor; } - if (win->cursor == curs) { - return; /* Cursor is already set */ - } - - win->cursor = curs; - if (curs == WM_CURSOR_NONE) { GHOST_SetCursorVisibility(win->ghostwin, 0); return; @@ -162,6 +156,12 @@ void WM_cursor_set(wmWindow *win, int curs) GHOST_SetCursorVisibility(win->ghostwin, 1); + if (win->cursor == curs) { + return; /* Cursor is already set */ + } + + win->cursor = curs; + if (curs < 0 || curs >= WM_CURSOR_NUM) { BLI_assert(!"Invalid cursor number"); return; ```
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@JulianEisel: mind checking?

@JulianEisel: mind checking?
Member

@lichtwerk LGTM.

@lichtwerk LGTM.
Member

In #80333#1008464, @JulianEisel wrote:
@lichtwerk LGTM.

:) I meant the thing with the modalcursor being stuck on import/export

> In #80333#1008464, @JulianEisel wrote: > @lichtwerk LGTM. :) I meant the thing with the modalcursor being stuck on import/export
Member

Added subscribers: @borschberry, @thackett

Added subscribers: @borschberry, @thackett

I'm having a crazy time trying to follow cursor-related changes in debugging, but I've found a way to fix the import cursor issue by "invalidating" the cursor prior to restoring it.

P1629: #80333 Invalidate Cursor

diff --git a/source/blender/windowmanager/intern/wm_cursors.c b/source/blender/windowmanager/intern/wm_cursors.c
index 8e89c08a831..e32b504edc2 100644
--- a/source/blender/windowmanager/intern/wm_cursors.c
+++ b/source/blender/windowmanager/intern/wm_cursors.c
@@ -217,6 +217,7 @@ void WM_cursor_modal_restore(wmWindow *win)
 {
   win->modalcursor = 0;
   if (win->lastcursor) {
+    win->cursor = 0;
     WM_cursor_set(win, win->lastcursor);
   }
   win->lastcursor = 0;

I'm having a crazy time trying to follow cursor-related changes in debugging, but I've found a way to fix the import cursor issue by "invalidating" the cursor prior to restoring it. [P1629: #80333 Invalidate Cursor](https://archive.blender.org/developer/P1629.txt) ```diff diff --git a/source/blender/windowmanager/intern/wm_cursors.c b/source/blender/windowmanager/intern/wm_cursors.c index 8e89c08a831..e32b504edc2 100644 --- a/source/blender/windowmanager/intern/wm_cursors.c +++ b/source/blender/windowmanager/intern/wm_cursors.c @@ -217,6 +217,7 @@ void WM_cursor_modal_restore(wmWindow *win) { win->modalcursor = 0; if (win->lastcursor) { + win->cursor = 0; WM_cursor_set(win, win->lastcursor); } win->lastcursor = 0; ```
Philipp Oeser changed title from Cursor disappears after rotating navigation gizmo to Cursor not reset properly (disappears after rotating navigation gizmo, stuck after importing) 2020-09-14 17:49:52 +02:00
Member

Added subscriber: @Ghostil

Added subscriber: @Ghostil
Member

@lichtwerk committed fix for the import cursor issue, 7b66c719ae. Feel free to commit your fix for this one.

@lichtwerk committed fix for the import cursor issue, 7b66c719ae. Feel free to commit your fix for this one.
Philipp Oeser self-assigned this 2020-09-15 13:26:29 +02:00
Member

In #80333#1016040, @JulianEisel wrote:
@lichtwerk committed fix for the import cursor issue, 7b66c719ae. Feel free to commit your fix for this one.

Thx, will do in a bit

> In #80333#1016040, @JulianEisel wrote: > @lichtwerk committed fix for the import cursor issue, 7b66c719ae. Feel free to commit your fix for this one. Thx, will do in a bit

This issue was referenced by 2b36e6bee6

This issue was referenced by 2b36e6bee6ccf5c75708b7fe3815736f426164cb
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80333
No description provided.